Improved order logic

--- a/frontent/public/locales/en/translation.json
+++ b/frontent/public/locales/en/translation.json
@@ -50,7 +50,7 @@
     "order_btn": "Place Order",
     "order_btn_loading": "Placing Order...",
     "order_add_guarantee": "24-month guarantee",
-    "order_add_guarantee_description": "Extend your product warranty for 24 months for an additional €50 per item.",
+    "order_add_guarantee_description": "Extend your product warranty for 24 months for an additional 1250 Kč per item.",
     "order_error": "Failed to create the order. Try again later",
     "order_success_title": "Payment Successful!",
     "order_success_description": "Your order has been placed successfully. You can return back to shop. We will contact with you as soon as possible!",
